--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "@angular-devkit/build-angular": "^14.2.11",
     "@angular/cli": "~14.2.11",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/chai": "^4.3.5",
     "@types/jasmine": "~4.0.0",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "mocha": "^10.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "~4.7.2"
   }
 }
